# dw2md

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  SPEC.md  react-wiki.md
.claude/skills/fetch-deepwiki/: SKILL.md
.github/workflows/: release.yml
homebrew-tap/Formula/: dw2md.rb
src/: main.rs
src/compiler/: json.rs  markdown.rs  mod.rs
src/mcp/: mod.rs  transport.rs  types.rs
src/wiki/: filter.rs  mod.rs
tests/: integration.rs
