[package]
name = "dw2md"
version = "0.1.0"
edition = "2021"
description = "Crawl a DeepWiki repository and compile all pages into a single, LLM-friendly markdown file"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dialoguer = "0.11"

[dev-dependencies]
wiremock = "0.6"
